# gen-ai-playground

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
models/mistralai-Code-Instruct/: README.md  adapter_config.json
notebooks/: mistral-fine-tuning.ipynb  mistral-medical-transcripts.ipynb  mistral-structured-data-extraction.ipynb
