[tool.poetry]
name = "gen-ai-playground"
version = "0.1.0"
description = ""
authors = ["Argiris Grivas <argiris.grivas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
transformers = "^4.37.2"
pandas = "^2.2.0"
langchain = "^0.1.5"
ipykernel = "^6.29.0"
bitsandbytes = "^0.42.0"
accelerate = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
